--- a/style/style.css
+++ b/style/style.css
@@ -38,17 +38,17 @@
 }
 html{
     font-family: 'DM Sans', sans-serif;
+    
 }
 
-body{
-    background: #72D569;
+body,a{
+    text-decoration: none;
 }
 
 .container{
-    width: 500px;
-    margin: 60px auto;
+    max-width: 300px;
+    margin: 40px auto;
     text-align: center;
-    border:4px solid red;
 }
 
 img{
@@ -58,7 +58,52 @@ img{
 img.avatar{
     width: 150px;
     height:150px;
-    border: 4px solid #106408;
+    border: 4px solid #0F3270;
     border-radius: 50%;
     padding:4px;
+}
+
+.container h3{
+    font-size: 36px;
+    color: #0F3270;
+    font-weight: bold;
+}
+
+.container p{
+    margin-bottom: 36px;
+    font-weight: bold;
+    opacity: 0.8
+}
+
+ul{
+    list-style: none;
+}
+
+ul li{
+    margin-top:12px;
+    border: 1px solid #0F3270;
+    border-radius: 4px;
+    text-transform:uppercase;
+}
+
+ul li a{
+    font-size: 16px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height:53px;
+    transition: background 200ms;
+    font-weight: 700;
+    opacity: 0.8
+}
+
+ul li a:hover{
+    background-color: #0F3270;
+    color: white;
+}
+
+footer p{
+    margin-top: 24px;
+    font-size: 14px;
+    text-align: center;
 }
