--- a/style/style.css
+++ b/style/style.css
@@ -58,7 +58,7 @@ img{
 img.avatar{
     width: 150px;
     height:150px;
-    border: 4px solid #0F3270;
+    border: 3px solid #0F3270;
     border-radius: 50%;
     padding:4px;
 }
@@ -77,6 +77,7 @@ img.avatar{
 
 ul{
     list-style: none;
+    
 }
 
 ul li{
@@ -84,6 +85,7 @@ ul li{
     border: 1px solid #0F3270;
     border-radius: 4px;
     text-transform:uppercase;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.6)
 }
 
 ul li a{
