--- a/style/style.css
+++ b/style/style.css
@@ -49,6 +49,7 @@ body,a{
     max-width: 300px;
     margin: 40px auto;
     text-align: center;
+    border:1px solid red
 }
 
 img{
@@ -61,6 +62,7 @@ img.avatar{
     border: 3px solid #0F3270;
     border-radius: 50%;
     padding:4px;
+    margin-bottom: 12px;
 }
 
 .container h3{
@@ -81,7 +83,7 @@ ul{
 }
 
 ul li{
-    margin-top:12px;
+    margin-top:24px;
     border: 1px solid #0F3270;
     border-radius: 4px;
     text-transform:uppercase;
@@ -113,7 +115,7 @@ ul li a:active{
 }
 
 footer p{
-    margin-top: 24px;
+    margin-top: 36px;
     font-size: 14px;
     text-align: center;
 }
